Modulo de Consulta en la middleware
